<resources>
    <string name="app_name">DownloadManager</string>
    <string name="url">URL</string>
    <string name="download">Download</string>
    <string name="filename">Filename</string>
    <string name="more">More</string>
    <string name="icon">Icon</string>
    <string name="open">Open</string>
    <string name="open_folder">Open folder</string>
    <string name="remove">Remove</string>
    <string name="delete">Delete</string>
    <string name="copy_download_link">Copy download link</string>
    <string name="add">Add</string>
    <string name="redownload">Redownload</string>
    <string name="download_file">Download file</string>
    <string name="link">Link</string>
    <string name="save_as">Save as:</string>
    <string name="size">Size:</string>
    <string name="storage">Storage:</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_download_file_dialog">Download file</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="filename_mp4">filename.mp4</string>
</resources>